--- a/coding/coding.html
+++ b/coding/coding.html
@@ -26,7 +26,7 @@
         <div class="animated bounceInDown shad">
             <div class="shad">
                 <h4 class="sameline">CodeChef</h4>
-                <a href="https://www.codechef.com/users/adi1307"><img src="./images/codechef.jpg" alt="aditya" width="60px" height="60px" 
+                <a href="https://www.codechef.com/users/dude_perfect5"><img src="./images/codechef.jpg" alt="aditya" width="60px" height="60px" 
                     class="connecter animated fadeInLeft image"></a>
             </div>
             <br><br>
